--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,21 @@
 </head>
 <body>
 
-<h1>Day 8 of GWC</h1>
-<p>Python and Scratch have few similarites and differences. they both use variables in order to help the code process. additionally, its based off of a trial and error process. some differences include that there are no characters in python. also, scratch already has the dictionary where you can drag and pull stuff together. whereas, python you completely make up the code on your own by type or copy and pasting. 
-on another note, debugging the program in python was very frustrating. i spent an hour finding out how to change the color and finally, i had found out how to do it. i felt a weight off my shoulder because it took me so long.</p>
+<h1>Day 8 of GWC:</h1>
+<p>Python and Scratch have few similarites and differences. they both use variables
+in order to help the code process. additionally, its based off of a trial and error
+process. some differences include that there are no characters in python. also, scratch
+already has the dictionary where you can drag and pull stuff together. Whereas, python
+ you completely make up the code on your own by type or copy and pasting.
+on another note, debugging the program in python was very frustrating. i spent an hour
+finding out how to change the color and finally, i had found out how to do it. i felt a
+weight off my shoulder because it took me so long.
+<h1>DAY 10 OF GWC:</h1>
+ a list is basically a list of lists. it kind of describes a certain thing like a varibale
+ does but it is not a variable. It's useful because it organizes your data. its very easy
+ and convienant to use.I think me and Sanjana worked well together. we bounced idewas off
+ of each other. Hope and Anwen understood the subject well enought o explain a few topics to
+ me that we got wrong.  </p>
 
 </body>
 </html>
