--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,17 @@ weight off my shoulder because it took me so long.
  does but it is not a variable. It's useful because it organizes your data. its very easy
  and convienant to use.I think me and Sanjana worked well together. we bounced idewas off
  of each other. Hope and Anwen understood the subject well enought o explain a few topics to
- me that we got wrong.  </p>
-
+ me that we got wrong.
+ <h1>OBAMACON:</h1>
+ This is the first project that wasnt as hard because it didnt involve all these extra steps. 
+ it was a very simple task. making lists wasnt as challanging and i actually enjoyed making them.
+ a difficultly couldve been where i wanted to edit the colors instead of using the original ones 
+ that they provided for us. i wasnt sure how to plug them in at first, but then my
+ partner showed me how to do it. she wasnt completely correct, but when we presented my teacher 
+ told me i corrected it and made it more clear. i used each element of Core4 into my project. if 
+ i had more time i would make the filter seem natural but also unique and fiferent at the same time. 
+ my highlight was the lists. i feel like it was the first thing out of the whole two weeks that i had 
+ acomplished 100% right all on my own. i did not like logisim. im finally starting to understand 
+ python more and more as we move foward.</p>
 </body>
 </html>
