--- a/aboutme.html
+++ b/aboutme.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,6 +34,11 @@ weight off my shoulder because it took me so long.
  i had more time i would make the filter seem natural but also unique and fiferent at the same time.
  my highlight was the lists. i feel like it was the first thing out of the whole two weeks that i had
  acomplished 100% right all on my own. i did not like logisim. im finally starting to understand
- python more and more as we move foward.</p>
+ python more and more as we move foward.
+ <h1>ROBOTICS:</h1>
+ they both work extremly hard and take multiple trials of code to find the perfect solution. our team 
+ was very productive abd innovative. we worked very well together. another group nitelligently and creatively 
+ incorporated a song into their lighshow. basic pieces was a for loop and the same type of 
+ coding outline.</p>
 </body>
 </html>
